# SmtpClient

./: .gcc-flags.json  .gitignore  CMakeLists.txt  README.md
src/: email.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  smtp_client.cpp  smtp_client.hpp  untitled.ui  utils.hpp
